@@ -6,18 +6,21 @@ import com.github.rahulsom.grooves.api.events.BaseEvent;
 import com.github.rahulsom.grooves.api.events.Deprecates;
 import com.github.rahulsom.grooves.api.events.RevertEvent;
 import com.github.rahulsom.grooves.api.snapshots.VersionedSnapshot;
-import com.github.rahulsom.grooves.queries.internal.*;
-import rx.Observable;
+import com.github.rahulsom.grooves.queries.internal.BaseQuery;
+import com.github.rahulsom.grooves.queries.internal.Executor;
+import com.github.rahulsom.grooves.queries.internal.Pair;
+import com.github.rahulsom.grooves.queries.internal.QueryExecutor;
+import io.reactivex.Flowable;
+import io.reactivex.Maybe;
+import io.reactivex.Single;
+import org.reactivestreams.Publisher;
 
 import java.util.ArrayList;
 import java.util.List;
 
-import static com.github.rahulsom.grooves.queries.internal.Utils.returnOrRedirect;
-import static com.github.rahulsom.grooves.queries.internal.Utils.stringify;
+import static com.github.rahulsom.grooves.queries.internal.Utils.*;
+import static io.reactivex.Flowable.empty;
 import static java.util.stream.Collectors.toList;
-import static rx.Observable.empty;
-import static rx.Observable.error;
-import static rx.Observable.just;
 
 /**
  * Default interface to help in building versioned snapshots.
@@ -53,11 +56,11 @@ public interface VersionedQuerySupport<
      * @param aggregate   The aggregate for which a snapshot is to be computed
      * @param maxPosition The maximum allowed version of the snapshot that is deemed usable
      *
-     * @return An Observable that returns at most one snapshot
+     * @return A Publisher that returns at most one snapshot
      */
-    default Observable<SnapshotT> getLastUsableSnapshot(
+    default Flowable<SnapshotT> getLastUsableSnapshot(
             final AggregateT aggregate, long maxPosition) {
-        return getSnapshot(maxPosition, aggregate)
+        return flowable(getSnapshot(maxPosition, aggregate))
                 .defaultIfEmpty(createEmptySnapshot())
                 .doOnNext(it -> {
                     final String snapshotAsString =
@@ -78,7 +81,7 @@ public interface VersionedQuerySupport<
      *
      * @return A Tuple containing the snapshot and the events
      */
-    default Observable<Pair<SnapshotT, List<EventT>>> getSnapshotAndEventsSince(
+    default Single<Pair<SnapshotT, List<EventT>>> getSnapshotAndEventsSince(
             AggregateT aggregate, long version) {
         return getSnapshotAndEventsSince(aggregate, version, true);
     }
@@ -95,38 +98,47 @@ public interface VersionedQuerySupport<
      *
      * @return A Tuple containing the snapshot and the events
      */
-    default Observable<Pair<SnapshotT, List<EventT>>> getSnapshotAndEventsSince(
+    default Single<Pair<SnapshotT, List<EventT>>> getSnapshotAndEventsSince(
             AggregateT aggregate, long version, boolean reuseEarlierSnapshot) {
         if (reuseEarlierSnapshot) {
-            return getLastUsableSnapshot(aggregate, version).flatMap(lastSnapshot ->
-                    getUncomputedEvents(aggregate, lastSnapshot, version).toList()
-                            .flatMap(events -> {
-                                if (events.stream().anyMatch(it -> it instanceof RevertEvent)) {
-                                    List<EventT> reverts = events.stream()
-                                            .filter(it -> it instanceof RevertEvent)
-                                            .collect(toList());
-                                    getLog().info("     Uncomputed reverts exist: {}",
-                                            stringify(reverts));
-                                    return getSnapshotAndEventsSince(
-                                            aggregate, version, false);
-                                } else {
-                                    getLog().debug("     Events since last snapshot: {}",
-                                            stringify(events));
-                                    return just(new Pair<>(lastSnapshot, events));
+            return getLastUsableSnapshot(aggregate, version)
+                    .flatMap(lastSnapshot ->
+                            flowable(getUncomputedEvents(aggregate, lastSnapshot, version))
+                                    .toList()
+                                    .toFlowable()
+                                    .flatMap(events -> {
+                                        if (events.stream().anyMatch(
+                                                it -> it instanceof RevertEvent)) {
+                                            List<EventT> reverts = events.stream()
+                                                    .filter(it -> it instanceof RevertEvent)
+                                                    .collect(toList());
 
-                                }
-                            }));
+                                            getLog().info("     Uncomputed reverts exist: {}",
+                                                    stringify(reverts));
+
+                                            return getSnapshotAndEventsSince(
+                                                    aggregate, version, false)
+                                                    .toFlowable();
+
+                                        } else {
+                                            getLog().debug("     Events since last snapshot: {}",
+                                                    stringify(events));
+
+                                            return Flowable.just(new Pair<>(lastSnapshot, events));
+                                        }
+                                    }))
+                    .firstOrError();
 
         } else {
             SnapshotT lastSnapshot = createEmptySnapshot();
 
-            final Observable<List<EventT>> uncomputedEvents =
-                    getUncomputedEvents(aggregate, lastSnapshot, version)
+            final Single<List<EventT>> uncomputedEvents =
+                    flowable(getUncomputedEvents(aggregate, lastSnapshot, version))
                             .toList();
 
             return uncomputedEvents
-                    .doOnNext(ue -> getLog().debug("     Events since origin: {}",
-                            stringify(ue)))
+                    .doOnSuccess(ue ->
+                            getLog().debug("     Events since origin: {}", stringify(ue)))
                     .map(ue -> new Pair<>(lastSnapshot, ue));
         }
 
@@ -137,7 +149,7 @@ public interface VersionedQuerySupport<
         return new QueryExecutor<>();
     }
 
-    Observable<EventT> getUncomputedEvents(
+    Publisher<EventT> getUncomputedEvents(
             AggregateT aggregate, SnapshotT lastSnapshot, long version);
 
 
@@ -147,9 +159,9 @@ public interface VersionedQuerySupport<
      * @param aggregate The aggregate
      * @param version   The version number, starting at 1
      *
-     * @return An Observable that returns at most one Snapshot
+     * @return A Publisher that returns at most one Snapshot
      */
-    default Observable<SnapshotT> computeSnapshot(AggregateT aggregate, long version) {
+    default Publisher<SnapshotT> computeSnapshot(AggregateT aggregate, long version) {
         return computeSnapshot(aggregate, version, true);
     }
 
@@ -161,34 +173,36 @@ public interface VersionedQuerySupport<
      * @param redirect  If there has been a deprecation, redirect to the current aggregate's
      *                  snapshot. Defaults to true.
      *
-     * @return An Observable that returns at most one Snapshot
+     * @return A Publisher that returns at most one Snapshot
      */
-    default Observable<SnapshotT> computeSnapshot(
+    default Publisher<SnapshotT> computeSnapshot(
             AggregateT aggregate, long version, boolean redirect) {
 
         getLog().info("Computing snapshot for {} version {}",
                 aggregate, version == Long.MAX_VALUE ? "<LATEST>" : version);
 
-        return getSnapshotAndEventsSince(aggregate, version).flatMap(seTuple2 -> {
+        return getSnapshotAndEventsSince(aggregate, version).toFlowable().flatMap(seTuple2 -> {
             List<EventT> events = seTuple2.getSecond();
-            SnapshotT lastUsableSnapshot = seTuple2.getFirst();
+            SnapshotT snapshot = seTuple2.getFirst();
 
             getLog().info("Events: {}", events);
 
             if (events.stream().anyMatch(it -> it instanceof RevertEvent)) {
-                return lastUsableSnapshot
-                        .getAggregateObservable()
-                        .flatMap(aggregate1 -> aggregate1 == null ?
+                return flowable(snapshot
+                        .getAggregateObservable()).flatMap(aggregate1 ->
+                        aggregate1 == null ?
                                 computeSnapshotAndEvents(
-                                        aggregate, version, redirect, events, lastUsableSnapshot) :
+                                        aggregate, version, redirect, events, snapshot)
+                                        .toFlowable() :
                                 empty())
-                        .map(Observable::just)
+                        .map(Flowable::just)
                         .defaultIfEmpty(computeSnapshotAndEvents(
-                                aggregate, version, redirect, events, lastUsableSnapshot))
+                                aggregate, version, redirect, events, snapshot).toFlowable())
                         .flatMap(it -> it);
             }
-            return computeSnapshotAndEvents(
-                    aggregate, version, redirect, events, lastUsableSnapshot);
+
+            return computeSnapshotAndEvents(aggregate, version, redirect, events, snapshot)
+                    .toFlowable();
         });
 
     }
@@ -203,56 +217,56 @@ public interface VersionedQuerySupport<
      * @param events             The list of events
      * @param lastUsableSnapshot The last known usable snapshot
      *
-     * @return An observable of the snapshot
+     * @return A Publisher of the snapshot
      */
-    default Observable<SnapshotT> computeSnapshotAndEvents(
+    default Single<SnapshotT> computeSnapshotAndEvents(
             AggregateT aggregate, long version, boolean redirect, List<EventT> events,
             SnapshotT lastUsableSnapshot) {
         lastUsableSnapshot.setAggregate(aggregate);
 
-        Observable<EventT> forwardOnlyEvents = Utils.getForwardOnlyEvents(
-                events, getExecutor(), () -> getSnapshotAndEventsSince(aggregate, version, false)
-        );
+        Flowable<EventT> forwardOnlyEvents = getForwardOnlyEvents(events, getExecutor(),
+                () -> getSnapshotAndEventsSince(aggregate, version, false)).cache();
 
-        Observable<EventT> applicableEvents = forwardOnlyEvents
+        Flowable<EventT> applicableEvents = forwardOnlyEvents
                 .filter(e -> e instanceof Deprecates)
                 .toList()
-                .flatMap(list -> {
-                    if (list.isEmpty()) {
-                        return forwardOnlyEvents;
-                    } else {
-                        Observable<Pair<SnapshotT, List<EventT>>> snapshotAndEventsSince =
-                                getSnapshotAndEventsSince(aggregate, version, false);
-                        return snapshotAndEventsSince.flatMap(p -> Utils.getForwardOnlyEvents(
-                                p.getSecond(), getExecutor(), () -> error(
-                                        new GroovesException("Couldn't apply deprecates events"))));
-                    }
-                });
+                .toFlowable()
+                .flatMap(list -> list.isEmpty() ?
+                        forwardOnlyEvents :
+                        getSnapshotAndEventsSince(aggregate, version, false)
+                                .toFlowable()
+                                .flatMap(p -> getForwardOnlyEvents(
+                                        p.getSecond(), getExecutor(), () ->
+                                                Single.error(new GroovesException(
+                                                        "Couldn't apply deprecates events")))));
 
+        final Single<SnapshotT> snapshotTypeObservable =
+                single(getExecutor().applyEvents((QueryT) this, lastUsableSnapshot,
+                        applicableEvents, new ArrayList<>(), aggregate));
 
-        final Observable<SnapshotT> snapshotObservable =
-                getExecutor().applyEvents((QueryT) this, lastUsableSnapshot, applicableEvents,
-                        new ArrayList<>(), aggregate);
-
-        return snapshotObservable
-                .doOnNext(snapshot -> {
+        return snapshotTypeObservable
+                .doOnSuccess(snapshot -> {
                     if (!events.isEmpty()) {
                         snapshot.setLastEvent(events.get(events.size() - 1));
                     }
-
                     getLog().info("  --> Computed: {}", snapshot);
                 })
-                .flatMap(it -> returnOrRedirect(redirect, events, it,
-                        () -> it.getDeprecatedByObservable()
-                                .flatMap(x -> computeSnapshot(x, version))
-                ));
+                .flatMap(it ->
+                        single(
+                                returnOrRedirect(redirect, events, it, () ->
+                                        single(it.getDeprecatedByObservable())
+                                                .flatMap(aggregateT ->
+                                                        single(computeSnapshot(aggregateT, version))
+                                                )
+                                )
+                        )
+                );
     }
 
     @Override
-    default Observable<EventT> findEventsBefore(EventT event) {
-        return event
-                .getAggregateObservable()
-                .flatMap(aggregate -> getUncomputedEvents(aggregate, null, event.getPosition()));
+    default Publisher<EventT> findEventsBefore(EventT event) {
+        return flowable(event.getAggregateObservable())
+                .flatMap(it -> flowable(getUncomputedEvents(it, null, event.getPosition())));
     }
 
 }
